z-index fix

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -120,7 +120,7 @@ a.step:first-child:after {
   background-color: var(--blue-color);
   box-shadow: 0 2px 8px 0 var(--blue-color);
   border-radius: 1px;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .stepActive .navSpanNumber {
