--- a/frontend/src/components/Sidebar/sidebar.module.css
+++ b/frontend/src/components/Sidebar/sidebar.module.css
@@ -84,7 +84,7 @@
   position: relative;
   width: 7.5rem;
   border-radius: 10px;
-  z-index: 1000;
+  z-index: 10;
 }
 
 
